@@ -12,7 +12,7 @@
     <groupId>io.reacted</groupId>
     <artifactId>reacted-all</artifactId>
     <packaging>pom</packaging>
-    <version>1.5.1-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
 
     <name>ReActed</name>
     <description>
@@ -73,15 +73,15 @@
     </scm>
 
     <properties>
-        <awaitility.version>4.0.3</awaitility.version>
-        <chronicle.queue.version>5.19.16</chronicle.queue.version>
-        <google.guava.version>30.1.1-jre</google.guava.version>
-        <mockito.version>3.10.0</mockito.version>
+        <awaitility.version>4.2.0</awaitility.version>
+        <chronicle.queue.version>5.24ea0</chronicle.queue.version>
+        <google.guava.version>31.1-jre</google.guava.version>
+        <mockito.version>4.8.0</mockito.version>
         <junit.version>5.7.2</junit.version>
         <commons-io.version>2.8.0</commons-io.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.shade.plugin.version>3.2.1</maven.shade.plugin.version>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
@@ -90,24 +90,26 @@
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
         <nexus.staging.plugin.version>1.6.8</nexus.staging.plugin.version>
         <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
-        <maven.gpg.plugin.version>1.6</maven.gpg.plugin.version>
+        <maven.gpg.plugin.version>3.0.1</maven.gpg.plugin.version>
         <maven.failsafe.plugin.version>3.0.0-M5</maven.failsafe.plugin.version>
         <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
+        <agrona.version>1.17.1</agrona.version>
         <asm.version>7.3.1</asm.version>
-        <slf4j-api.version>2.0.0-alpha1</slf4j-api.version>
-        <slf4j-simple.version>2.0.0-alpha1</slf4j-simple.version>
-        <apache-curator.version>5.1.0</apache-curator.version>
-        <apache-curator-discovery.version>5.1.0</apache-curator-discovery.version>
-        <jackson.databind.version>2.12.7.1</jackson.databind.version>
-        <grpc.version>1.38.0</grpc.version>
-        <protobuf.version>3.17.1</protobuf.version>
+        <slf4j-api.version>2.0.0</slf4j-api.version>
+        <slf4j-simple.version>2.0.0</slf4j-simple.version>
+        <apache-curator.version>5.4.0</apache-curator.version>
+        <apache-curator-discovery.version>5.4.0</apache-curator-discovery.version>
+        <jackson.databind.version>2.13.4.2</jackson.databind.version>
+        <grpc.version>1.49.0</grpc.version>
+        <protobuf.version>3.21.5</protobuf.version>
         <protobuf.maven.plugin.version>0.6.1</protobuf.maven.plugin.version>
         <tomcat.annotations.version>6.0.53</tomcat.annotations.version>
         <build.helper.version>3.0.0</build.helper.version>
-        <kafka.client.version>2.5.0</kafka.client.version>
+        <kafka.client.version>3.3.1</kafka.client.version>
         <apache.commons.lang.version>3.12.0</apache.commons.lang.version>
-        <reactive.streams.version>1.0.3</reactive.streams.version>
+        <reactive.streams.version>1.0.4</reactive.streams.version>
         <testng.version>7.1.0</testng.version>
+        <jmh.version>1.35</jmh.version>
     </properties>
     <modules>
         <module>pattern</module>
@@ -176,6 +178,11 @@
                 <groupId>org.apache.curator</groupId>
                 <artifactId>curator-x-async</artifactId>
                 <version>${apache-curator.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.agrona</groupId>
+                <artifactId>agrona</artifactId>
+                <version>${agrona.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.reacted</groupId>
@@ -283,6 +290,20 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>${jmh.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>${jmh.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
     <build>
         <pluginManagement>
             <plugins>
@@ -353,9 +374,16 @@
                         <include>**/*.java</include>
                     </includes>
                     <argLine>
+                        --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+                        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+                        --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+                        --add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
                         --illegal-access=permit
-                        --add-exports
-                        java.base/jdk.internal.ref=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -365,6 +393,15 @@
                 <version>${maven.failsafe.plugin.version}</version>
                 <configuration>
                     <argLine>
+                        --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+                        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+                        --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+                        --add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
                         --illegal-access=permit
                     </argLine>
                 </configuration>
@@ -397,7 +434,7 @@
                     <dependency>
                         <groupId>org.apache.maven.scm</groupId>
                         <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.9.5</version>
+                        <version>2.0.0-M3</version>
                     </dependency>
                 </dependencies>
             </plugin>
